--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -44,3 +44,10 @@
     transform: translateX(0);
     padding-left: 15px;
 }
+
+.opacity-style {
+    margin-top: 12px !important;
+    margin-right: 25px !important;
+    cursor: pointer;
+    color: var(--font-color);
+}
