--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -53,7 +53,7 @@
 .address {
     display: flex;
     flex-direction: column;
-    
+    margin: 5px;
 }
 
 .address .title {
@@ -82,6 +82,7 @@
     box-shadow: 0 0 8px black;
     cursor: pointer;
     padding: 15px;
+    margin: 5px;
 }
 
 .address .email-list .email h3 {
