--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -58,7 +58,8 @@
 
 .address .title {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
     padding: 15px;
     background-color: var(--primary-color);
     box-shadow: 0 0 8px black;
@@ -67,6 +68,11 @@
 .address .title h3 {
     color: var(--font-color);
     margin: 0 25px;
+}
+
+.address .title div {
+    display: flex;
+    align-items: center;
 }
 
 .address .email-list {
@@ -78,11 +84,17 @@
 
 .address .email-list .email {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--primary-color);
     box-shadow: 0 0 8px black;
     cursor: pointer;
     padding: 15px;
-    margin: 5px;
+    margin: 5px 0;
+}
+
+.address .email-list .email div {
+    display: flex;
 }
 
 .address .email-list .email h3 {
