--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -30,19 +30,23 @@
     margin-right: 15px;
 }
 
-.navigation h3 {
+.navigation img {
     font-size: 2.5rem;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
     margin: 0;
     color: var(--font-color);
+    border-radius: 25px;
+    visibility: hidden;
+    height: 50px;
 }
 
-.navigation h3.active {
+.navigation img.active {
     left: 0;
     transform: translateX(0);
     padding-left: 15px;
+    visibility: visible;
 }
 
 .opacity-style {
