--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -76,12 +76,10 @@
 }
 
 .address .email-list {
-    display: none;
+    display: flex;
     flex-direction: column;
     padding-left: 25px;
     margin-top: 7px;
-    height: 0;
-    overflow: hidden;
     transition: height 1s;
 }
 
