--- a/src/CSS/github.css
+++ b/src/CSS/github.css
@@ -1,4 +1,5 @@
 .BtnGroup {
+    display: flex;
     -webkit-text-size-adjust: 100%;
     --border-width: 1px;
     --border-style: solid;
@@ -12,11 +13,13 @@
     list-style: none!important;
     list-style-type: none;
     box-sizing: border-box;
-    display: inline-block;
+    display: flex;
+    width: 100%;
     vertical-align: middle;
 }
 
 h3.address {
+    width: 100%;
     -webkit-text-size-adjust: 100%;
     --border-width: 1px;
     --border-style: solid;
